Adds inventory request
